[tool.poetry]
name = "efergy_exporter"
version = "0.3.0"
description = "Export Efergy metrics to Prometheus via rtl_433"
authors = ["Artanicus <artanicus@nocturnal.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
absl-py = "^1.0.0"
prometheus-client = "^0.12.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.344"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
efergy_exporter = 'efergy_exporter:run'
